[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libcst-analysis-tools"
version = "0.1.0"
description = "Python code analysis tools built with LibCST - extract classes, functions, and methods from Python source code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kasra", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["libcst", "ast", "code-analysis", "python", "static-analysis"]
requires-python = ">=3.8"
dependencies = [
    "libcst>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/kasra0/libcst-analysis-tools"
Repository = "https://github.com/kasra0/libcst-analysis-tools"
Issues = "https://github.com/kasra0/libcst-analysis-tools/issues"

[project.scripts]
list-classes = "src.list_classes:main"
list-functions = "src.list_functions:main"
list-methods = "src.list_methods:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]