[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libcst-analysis-tools"
version = "0.3.0"
description = "Python code analysis tools built with LibCST - extract classes, functions, and methods with full type safety and IntelliSense support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kasra", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["libcst", "ast", "code-analysis", "python", "static-analysis"]
requires-python = ">=3.8"
dependencies = [
    "libcst>=1.0.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/kasra0/libcst-analysis-tools"
Repository = "https://github.com/kasra0/libcst-analysis-tools"
Issues = "https://github.com/kasra0/libcst-analysis-tools/issues"

[project.scripts]
list-classes = "libcst_analysis_tools.list_classes:main"
list-functions = "libcst_analysis_tools.list_functions:main"
list-methods = "libcst_analysis_tools.list_methods:main"
libcst-analyze = "libcst_analysis_tools.view.App:main"

[tool.setuptools]
packages = [
    "libcst_analysis_tools",
    "libcst_analysis_tools.view",
    "libcst_analysis_tools.view.Components",
    "libcst_analysis_tools.view.Renderer",
    "libcst_analysis_tools.store",
]

[tool.setuptools.package-data]
libcst_analysis_tools = ["*.py", "view/*.tcss"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["libcst_analysis_tools"]
omit = [
    "tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/env-*/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"